# treeclip.v2

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  release-plz.toml
.github/workflows/: release-plz.yml
src/: cli.rs  main.rs
src/commands/: args.rs  run.rs
src/commands/run/: args.rs  run.rs
src/core/: constants.rs  errors.rs  mod.rs  utils.rs
src/core/clipboard/: clipboard.rs  mod.rs
src/core/editor/: editor.rs  mod.rs
src/core/exclude/: exclude.rs  mod.rs
src/core/traversal/: filter.rs  mod.rs  walker.rs
src/core/ui/: animations.rs  banner.rs  formatter.rs  messages.rs  mod.rs  table.rs
