# TreeClip - A CLI tool to traverse project files and extract them into file/clipboard
#
# Development Phases:
# 1. MVP: Directory traversal, clipboard output, editor integration ✅
# 2. Enhanced: .treeclipignore, starred directories, config support ✅
# 3. Advanced: History management, search, interactive TUI (Future)
#
# See README.md for full feature roadmap and implementation details.

[package]
name = "treeclip"
version = "0.9.0"
edition = "2024"
authors = ["SeyedAli <seyed.ali.devl@gmail.com>"]
description = "A CLI tool to traverse your project files and extract them into a single file or clipboard"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/seyedali-dev/treeclip.v2"
repository = "https://github.com/seyedali-dev/treeclip.v2"
keywords = ["cli", "clipboard", "file-traversal", "code-extractor", "productivity"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.88.0"

[dependencies]
# Error handling - production-ready pattern
anyhow = "1.0.100"       # Application-level error handling with context
thiserror = "2.0.9"       # Library-level custom error types

# CLI framework
clap = { version = "4.5.53", features = ["derive", "color", "usage", "help", "error-context", "suggestions", "unicode"] }

# File system operations
walkdir = "2.5.0"        # Directory traversal
ignore = "0.4.25"       # Gitignore-style pattern matching

# System integrations
arboard = "3.6.1"        # Cross-platform clipboard
tempfile = "3.23.0"     # Temporary file handling

# UI and formatting
colored = "3.0.0"        # Terminal colors
unicode-width = "0.2.2"  # Unicode-aware width calculations

# Utilities
rand = "0.10.0-rc.5"     # Random number generation for UI

[profile.release]
lto = true               # Link-time optimization for smaller binaries
codegen-units = 1        # Better optimization at cost of compile time
strip = true             # Strip symbols for smaller binary
opt-level = 3            # Maximum optimization

[profile.dev]
opt-level = 1            # Faster compile times while developing

[profile.test]
opt-level = 1            # Reasonable performance for tests

[[bin]]
name = "treeclip"
path = "src/main.rs"
doc = false              # Binary doesn't need doc tests

[dev-dependencies]
# Test dependencies would go here if needed